<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="KeyWord">KeyWord</string>	
    <string name="app_name">ICM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">setting</string>
    <string name="action_settings0">เมนูหลัก</string>
    <string name="action_settings1">โบรชัวร์</string>
    <string name="action_settings2">จำลองการผ่อน</string>
    <string name="action_settings3">ผลิตภัณฑ์</string>
    <string name="action_settings4">การดูเเลหลังการขาย</string>
    <string name="action_settings5">ออกจากระบบ</string>
    <string name="Cd">Copyright &#169; 2014 PSU TRANG Version 1.0</string>

    <color name="C1">#2E8B57</color>
    <color name="C2">#FFFFFF</color>
    <color name="C3">#B5B5B5</color>
    <color name="C4">#528B8B</color>
    <color name="S1">#363636</color>
    <color name="C5">#838B83</color>

    <string name="P0">WELCOME</string>
    <string name="P100">ร้านช่างยุทธ์โทรทัศน์</string>
    <string name="P101">SatelliteDish</string>
    <string name="P102">เข้าสู่ระบบ</string>
    <string name="P103">Username</string>
    <string name="P104">Password</string>
    <string name="P105">LOGIN</string>
    <string name="P201">โบรชัวร์</string>
    <string name="P202">จำลองการผ่อน</string>
    <string name="P203">ผลิตภัณฑ์</string>
    <string name="P204">การดูเเลหลังการขาย</string>
    <string name="P205">ออกจากระบบ</string>
    <string name="P401">รายการติดตั้ง</string>
    <string name="P402">ค้นหาตำเเหน่งลูกค้า</string>
    <string name="P403">รายการเเจ้งซ่อม</string>
    <string name="Page201">ผลิตภัณฑ์</string>
    <string name="Page202">ราคา</string>
    <string name="Page203">จำนวนงวด</string>
    <string name="Page204">ราคาสุทธิ</string>
    <string name="Page205">0.00</string>
    <string name="Page206">บาท</string>
    <string name="Page207">งวด</string>
    <string name="Page208">คำนวณ</string>
    <string name="Page301">วิธีการชำระเงิน</string>
    <string name="Page302">สด</string>
    <string name="Page303">ผ่อน</string>
    <string name="Page304">ถัดไป</string>
    <string name="Page305">สด</string>
    <string name="Page306">ผ่อน</string>
    <string name="Page401">รหัสใบสั่งซื้อ</string>
    <string name="Page402">รหัสลูกค้า</string>
    <string name="Page403">ชื่อ</string>
    <string name="Page404">นามสกุล</string>
    <string name="Page405">พิกัด</string>
    <string name="Page406">ค้นหา</string>
    <string name="Page410">พิกัด</string>
    <string name="Page412">,</string>
    <string name="Page413">ชื่อสินค้า</string>
    <string name="Page414">ราคา</string>
    <string name="Page415">IPM</string>
    <string name="Page416">ตาางการผ่อนชำระ</string>
    <string name="Page417">เลขที่สั่งซื้อ</string>
    <string name="Page418">ชื่อสินค้า</string>
    <string name="Page419">ราคา</string>
    <string name="Page420">จำนวนงวด</string>
    <string name="Page421">ราคาผ่อน</string>
    <string name="Page422">ชื่อ</string>
    <string name="Page423">นามสกุล</string>
    <string name="Page424">เลขบัตรประชาชน</string>
    <string name="Page425_1">บ้านเลขที่</string>
    <string name="Page425_2">หมู่</string>
    <string name="Page425_3">ถนน</string>
    <string name="Page425_4">ตำบล</string>
    <string name="Page425_5">อำเภอ</string>
    <string name="Page425_6">จังหวัด</string>
    <string name="Page425_7">รหัสไปรษณีย์</string>
    <string name="Page426">พิกัด</string>
    <string name="Page428">เบอร์โทร</string>
    <string name="Page429">ตาางการผ่อนชำระ</string>
    <string name="Page430">ค้นหา</string>
    <string name="Page431">บันทึก</string>
    <string name="Page432"> เริ่มค้นหา</string>
    <string name="Page433">หยุดค้นหา</string>
    <string name="Page434"> บันทึก</string>
    <string name="Page435">ค้นหาพิกัดที่ตั้ง</string>
    <string name="PageDt01">รหัสผู้ใช้งาน</string>
    <string name="PageDt02">Username</string>
    <string name="PageDt03">Password</string>
    <string name="PageDt04">ชื่อ</string>
    <string name="PageDt05">นามสกุล</string>
    <string name="PageDt06">เบอร์โทร</string>
    <string name="PageDt07">เข้าสู่หน้าหลัก</string>
    <string name="PageDt08">ออกจากระบบ</string>
    <string name="PageDt09">เเผนก</string>
    <string name="PP">"   "</string>
    <string name="title_activity_page03">ขาย</string>
    <string name="title_activity_main">เมนู</string>
    <string name="title_activity_page2">จำลองการชำระเงิน</string>
    <string name="title_activity_page3">ขาย</string>
    <string name="title_activity_page4">ค้นหาตำเเหน่ง</string>
    <string name="title_activity_page3_1">การขายผ่อน</string>
    <string name="title_activity_page3_2">อัตตราการผ่อนชำระ</string>
    <string name="title_activity_page3_3">ข้อมูลลูกค้า</string>
    <string name="title_activity_page3_4">ค้นหาตำเเหน่ง</string>
    <string name="title_activity_mapmain">พิกัดลูกค้า</string>
    <string name="title_activity_detail">รายละเอียดผู้ใช้ระบบ</string>
    <string name="title_activity_map_current">พิกัดปัจจุบัน</string>
    <string name="title_activity_page1">โบรชัวร์</string>
    <string name="title_activity_page4_1">การดูเเลหลังการขาย</string>
    <string name="title_activity_page4_3">รายการติดตั้ง</string>
    <string name="title_activity_page4_2">อัพเดท</string>

</resources>
