<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.icm.Main" >

    <Button
        android:id="@+id/btnmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:drawableLeft="@drawable/book"
        android:background="@drawable/round"
        android:text="@string/P201" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button2"
        android:layout_alignRight="@+id/Button2"
        android:layout_centerVertical="true"
        android:background="@drawable/round"
        android:drawableLeft="@drawable/list"
        android:text="@string/P203" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Button3"
        android:layout_alignLeft="@+id/btnmain"
        android:layout_alignRight="@+id/btnmain"
        android:layout_marginBottom="23dp"
        android:background="@drawable/round"
        android:drawableLeft="@drawable/eye"
        android:text="@string/P202" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button3"
        android:layout_alignRight="@+id/Button3"
        android:layout_below="@+id/Button3"
        android:layout_marginTop="24dp"
        android:background="@drawable/round"
        android:drawableLeft="@drawable/map_pin"
        android:text="@string/P204" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Button4"
        android:layout_alignRight="@+id/Button4"
        android:layout_below="@+id/Button4"
        android:layout_marginTop="26dp"
        android:background="@drawable/round"
        android:drawableLeft="@drawable/exit"
        android:text="@string/P205" />

</RelativeLayout>
