<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >
 
   	<TableRow
      android:id="@+id/tableRow1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" >
     
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:layout_span="1"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  	        
 	</TableRow>

	<View
		android:layout_height="1dip"
		android:background="#CCCCCC" />
 
  <TableLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginRight="40dp"
       android:layout_marginLeft="40dp"
      android:layout_weight="0.02"
      
      android:orientation="horizontal" >
     
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="100dp" >

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="@string/PageDt01"
		          android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		          android:id="@+id/txtUser_Id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="User_Id"
		          android:textSize="16sp" />

	    </TableRow>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp" >
	    </LinearLayout>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true" 
		          android:text="@string/PageDt02"
		          android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		          android:id="@+id/txtUser_Username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="Username"
		          android:textSize="16sp" />

	    </TableRow>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp" >
	    </LinearLayout>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="@string/PageDt03"
		          android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		          android:id="@+id/txtUser_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:password="true"
		          android:text="Password"
		          android:textSize="16sp" />

	    </TableRow>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp" >
	    </LinearLayout>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="@string/PageDt04"
		          android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		          android:id="@+id/txtUser_Fname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="FName"
		          android:textSize="16sp" />

	    </TableRow>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp" >
	    </LinearLayout>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="@string/PageDt05"
		          android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		          android:id="@+id/txtUser_Lname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="LName"
		          android:textSize="16sp" />

	    </TableRow>
	   <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp" >
	    </LinearLayout>
	    
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="@string/PageDt06"
		          android:textAppearance="?android:attr/textAppearanceMedium" />
		
		      <TextView
		          android:id="@+id/txtUser_Tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="Tel"
		          android:textSize="16sp" />

	    </TableRow>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp" >
	    </LinearLayout>
	    
	    	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

		      <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="@string/PageDt09"
		          android:textAppearance="?android:attr/textAppearanceMedium" />

		      <TextView
		          android:id="@+id/txtUser_Depastment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
		          android:text="Depastment"
		          android:textSize="16sp" />

	    </TableRow>
	    
 	</TableLayout >

	<View
	    android:layout_height="1dip"
	    android:layout_weight="0.00"
	    android:background="#CCCCCC" />

	<Button
	    android:id="@+id/btnmain"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dp"
	     android:background="@drawable/round"
	    android:text="@string/PageDt07" />
	
</TableLayout>